--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "author": "David",
   "license": "ISC",
   "devDependencies": {
+    "@changesets/cli": "^2.29.7",
     "rollup": "^4.17.2",
     "rollup-plugin-delete": "^2.0.0",
     "rollup-plugin-typescript2": "^0.36.0",
